--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -84,6 +84,32 @@
         </div>
         <div class="col-lg-2-5 col-md-2-5 col-sm-12 col-xs-12 margin-bottom-none">
           <div class="flip margin-bottom-30">
+            <div class="card scroll_effect bounceInRight">
+              <div class="div-loan">
+                <div class="img-text">
+                  <i class="fa fa-6x fa-user-md"></i>
+                  <span>PROFESSIONAL LOAN</span>
+                </div>
+                <div class="loan-img5"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2-5 col-md-2-5 col-sm-12 col-xs-12 margin-bottom-none">
+          <div class="flip margin-bottom-30">
+            <div class="card scroll_effect bounceInRight">
+              <div class="div-loan">
+                <div class="img-text">
+                  <i class="fa fa-6x fa-user-md"></i>
+                  <span>CAR LOAN</span>
+                </div>
+                <div class="loan-img5"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2-5 col-md-2-5 col-sm-12 col-xs-12 margin-bottom-none">
+          <div class="flip margin-bottom-30">
             <div class="card">
               <div class="div-loan">
                 <div class="img-text">
@@ -101,22 +127,9 @@
               <div class="div-loan">
                 <div class="img-text">
                   <i class="fa fa-6x fa-building-o"></i>
-                  <span>PROPERTY LOAN</span>
+                  <span>LOAN AGAINST PROPERTY</span>
                 </div>
                 <div class="loan-img4"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2-5 col-md-2-5 col-sm-12 col-xs-12 margin-bottom-none">
-          <div class="flip margin-bottom-30">
-            <div class="card scroll_effect bounceInRight">
-              <div class="div-loan">
-                <div class="img-text">
-                  <i class="fa fa-6x fa-user-md"></i>
-                  <span>DOCTOR LOAN</span>
-                </div>
-                <div class="loan-img5"></div>
               </div>
             </div>
           </div>
@@ -145,11 +158,6 @@
         <div class="col-lg-2-5 col-md-2-5 col-sm-12 col-xs-12 margin-bottom-none">
           <div class="scroll_effect bounceInUp img-sbi-card">
             <%= image_tag "sbi-bank.png" %>
-          </div>
-        </div>
-        <div class="col-lg-2-5 col-md-2-5 col-sm-12 col-xs-12 margin-bottom-none">
-          <div class="scroll_effect bounceInUp">
-            <%= image_tag "yes-bank.png" %>
           </div>
         </div>
         <div class="col-lg-2-5 col-md-2-5 col-sm-12 col-xs-12 margin-bottom-none">
