--- a/app/views/personal_loan/step2.html.erb
+++ b/app/views/personal_loan/step2.html.erb
@@ -28,10 +28,45 @@
             <p class="error"><%= show_errors(@employer_detail, :employer_name) %></p>
           </div>
           <div class="form-group">
+            <span>Official Email Id <span></span></span>
+            <%= f.text_field(:office_email, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :office_email) %></p>
+          </div>
+          <div class="form-group">
+            <span>Monthly Net Salary(minimum 15k) <span>*</span></span>
+            <%= f.text_field(:monthly_net_salary, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :monthly_net_salary) %></p>
+          </div>
+          <div class="form-group">
+            <span>Years In Current Job <span>*</span></span>
+            <%= f.number_field(:years_in_current_job, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :years_in_current_job) %></p>
+          </div>
+          <div class="form-group">
+            <span>Designation <span>*</span></span>
+            <%= f.text_field(:designation, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :designation) %></p>
+          </div>
+          <div class="form-group">
+            <span>Office Address Line 1 <span>*</span></span>
+            <%= f.text_area(:office_address_line1, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :office_address_line1) %></p>
+          </div>
+          <div class="form-group">
+            <span>Office Address Line 2 <span>*</span></span>
+            <%= f.text_area(:office_address_line2, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :office_address_line2) %></p>
+          </div>
+          <div class="form-group">
+            <span>Landmark <span>*</span></span>
+            <%= f.text_area(:landmark, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :office_address_line2) %></p>
+          </div>
+          <div class="form-group">
             <span>Office State <span>*</span></span>
             <%= f.select(:office_state, states, class: "form-control") %>
             <p class="error"><%= show_errors(@employer_detail, :office_state) %></p>
-          </div>
+          </div>                    
           <div class="form-group">
             <span>Office City <span>*</span></span>
             <%= f.select(:office_city, cities, class: "form-control") %>
@@ -44,11 +79,32 @@
           </div>
           <div class="form-group">
             <span>Mailing Address <span>*</span></span>
-            <%= f.text_area(:mailing_address, class: "form-control") %>
+            <%= f.select(:mailing_address, mailing_address, class: "form-control") %>
             <p class="error"><%= show_errors(@employer_detail, :mailing_address) %></p>
+          </div>
+          <div class="form-group">
+            <span>Office Landline Number/ Mobile Number <span>*</span></span>
+            <%= f.text_field(:mobile_number, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :mobile_number) %></p>
+          </div>
+          <div class="form-group">
+            <span>Salary Account Bank Name <span>*</span></span>
+            <%= f.select(:salary_bank_account_name, bank_name, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :salary_bank_account_name) %></p>
+          </div>
+          <div class="form-group">
+            <span>Branch Name <span>*</span></span>
+            <%= f.text_field(:branch_name, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :branch_name) %></p>
+          </div>
+          <div class="form-group">
+            <span>Current EMI <span>*</span></span>
+            <%= f.text_field(:current_emi, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :current_emi) %></p>
           </div>
         </div>
         <div class="col-md-4">
+          <h3>Personal Reference</h3>
           <div class="form-group">
             <span>First Name <span>*</span></span>
             <%= f.text_field(:first_name, class: "form-control") %>
@@ -61,18 +117,8 @@
           </div>
           <div class="form-group">
             <span>Mobile Number <span>*</span></span>
-            <%= f.text_field(:mobile_number, class: "form-control") %>
-            <p class="error"><%= show_errors(@employer_detail, :mobile_number) %></p>
-          </div>
-          <div class="form-group">
-            <span>Account Number <span>*</span></span>
-            <%= f.text_field(:account_number, class: "form-control") %>
-            <p class="error"><%= show_errors(@employer_detail, :account_number) %></p>
-          </div>
-          <div class="form-group">
-            <span>Branch Name <span>*</span></span>
-            <%= f.text_field(:branch_name, class: "form-control") %>
-            <p class="error"><%= show_errors(@employer_detail, :branch_name) %></p>
+            <%= f.text_field(:ref_mobile_number, class: "form-control") %>
+            <p class="error"><%= show_errors(@employer_detail, :ref_mobile_number) %></p>
           </div>
         </div>
       </div>
