--- a/app/views/personal_loan/step3.html.erb
+++ b/app/views/personal_loan/step3.html.erb
@@ -16,7 +16,7 @@
 </section>
 
 
-  <%= form_for @personal_loan, :url => { :action => "update_personal_loan_assets" }, html: {id:  "personal_loan", class: "personal_loan"} do |f| %>
+  <%= form_for @personal_loan, :url => { :action => "update_personal_loan_assets" }, html: {id:  "personal_loan_assets", class: "personal_loan"} do |f| %>
     <div class="container">
       <div class="row"> 
         <div class="col-md-6">
