--- a/app/views/business_loan/step3.html.erb
+++ b/app/views/business_loan/step3.html.erb
@@ -16,7 +16,7 @@
 </section>
 
 
-  <%= form_for @business_loan_offer, :url => { :action => "update_business_offer_assets" }, html: {id:  "business_loan_offer", class: "business_loan_offer"} do |f| %>
+  <%= form_for @business_loan_offer, :url => { :action => "update_business_offer_assets" }, html: {id:  "business_loan_offer_assets", class: "business_loan_offer_assets"} do |f| %>
     <div class="container">
       <div class="row"> 
         <div class="col-md-8">
