--- a/app/views/business_loan/step2.html.erb
+++ b/app/views/business_loan/step2.html.erb
@@ -93,12 +93,12 @@
           </div>
           <div class="form-group">
             <span>Business City: <span>*</span></span>
-            <%= f.select(:city, cities, class: "form-control") %>
+            <%= f.select(:city, cities(f, :state, :city), class: "form-control") %>
             <p class="error"><%= show_errors(@business_loan_offer, :city) %></p>
           </div>
           <div class="form-group">
             <span>Business Pincode: <span>*</span></span>
-            <%= f.text_field(:pincode, class: "form-control") %>
+            <%= f.number_field(:pincode, class: "form-control") %>
             <p class="error"><%= show_errors(@business_loan_offer, :pincode) %></p>
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
