--- a/app/views/personal_loan/step4.html.erb
+++ b/app/views/personal_loan/step4.html.erb
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row align-items-end">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2>New Personal Loan</h2>
-                <h4>Apply for new personal loan</h4>
+                <h2>New Business Loan</h2>
+                <h4>Apply for new business loan</h4>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <ul class="breadcrumb">
@@ -14,6 +14,96 @@
         </div>
     </div>
 </section>
-
-
-<h1>Thank you for applying for personal loan</h1>
+<section class="business-loan-section">
+  <%= form_for @employer_detail, :url => { :action => @employer_detail.id.nil? ? "create_employer" : "update_employer" }, html: { id:  "employer_detail", class: "employer_detail" } do |f| %>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="form-group">
+            <h3>Employer Details</h3>
+          </div>
+          <div class="form-group">
+            <span>Employer Name <span>*</span></span>
+            <%= f.text_field(:employer_name, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Official Email Id <span></span></span>
+            <%= f.text_field(:office_email, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Monthly Net Salary(minimum 15k) <span>*</span></span>
+            <%= f.number_field(:monthly_net_salary, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Years In Current Job <span>*</span></span>
+            <%= f.number_field(:years_in_current_job, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Designation <span>*</span></span>
+            <%= f.text_field(:designation, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Office Address Line 1 <span>*</span></span>
+            <%= f.text_area(:office_address_line1, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Office Address Line 2 <span>*</span></span>
+            <%= f.text_area(:office_address_line2, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Landmark <span>*</span></span>
+            <%= f.text_area(:landmark, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Office State <span>*</span></span>
+            <%= f.select(:office_state, states, class: "form-control") %>
+          </div>                    
+          <div class="form-group">
+            <span>Office City <span>*</span></span>
+            <%= f.select(:office_city, cities(f, :office_state, :office_city), class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Office Pincode <span>*</span></span>
+            <%= f.text_field(:office_pincode, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Mailing Address <span>*</span></span>
+            <%= f.select(:mailing_address, mailing_address, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Office Landline Number/ Mobile Number <span>*</span></span>
+            <%= f.text_field(:mobile_number, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Salary Account Bank Name <span>*</span></span>
+            <%= f.select(:salary_bank_account_name, bank_name, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Branch Name <span>*</span></span>
+            <%= f.text_field(:branch_name, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Current EMI <span>*</span></span>
+            <%= f.number_field(:current_emi, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h3>Personal Reference</h3>
+          <div class="form-group">
+            <span>First Name <span>*</span></span>
+            <%= f.text_field(:first_name, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Last Name <span>*</span></span>
+            <%= f.text_field(:last_name, class: "form-control") %>
+          </div>
+          <div class="form-group">
+            <span>Mobile Number <span>*</span></span>
+            <%= f.text_field(:ref_mobile_number, class: "form-control") %>
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </div>
+  <%end%>
+</section>
